[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/StageManager.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Resources/cm_applause.wav" type="AudioStream" id=3]
[ext_resource path="res://Resources/cm_woah.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/cm_boo.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/cm_click1.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/cm_click2.wav" type="AudioStream" id=7]
[ext_resource path="res://Resources/chicken_machine.wav" type="AudioStream" id=8]

[node name="StageManager" type="Node" index="0"]

script = ExtResource( 1 )
starting_stage = "res://Scenes/MainMenu.tscn"

[node name="BackgroundBlured" parent="." index="0" instance=ExtResource( 2 )]

[node name="AudioStreamPlayerApplause" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 1.1
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioStreamPlayerWoah" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = -10.0
pitch_scale = 1.1
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioStreamPlayerBoo" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = -10.0
pitch_scale = 1.1
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioStreamPlayerClick1" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 6 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioStreamPlayerClick2" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 7 )
volume_db = -20.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioStreamPlayerMusic" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"


